# keybwd

./: .gitignore  .gitmodules  1125830-kak-ustanovit-qt-qt5-qt6-v-rossii-cherez-onlain-installyator-pri-blokirovke-ip-adresov  CMakeLists.txt  LICENSE  README.md  cmakestart.txt  get_text.cpp  json_work.hpp  main.cpp  mysql_example.cpp  server_bd.hpp
client/: CMakeLists.txt  CMakeLists.txt.user.3ca8404  main.cpp  qt_hello_world.cpp  settings.json
client/model/: SessionStats.cpp  SessionStats.h  StatsRepository.cpp  StatsRepository.h
client/view/: AppController.cpp  AppController.h  MainWindow.cpp  MainWindow.h  common_types.h
client/view/components/: ButtonsPanel.cpp  ButtonsPanel.h  LoginDialog.cpp  LoginDialog.h  StatsDialog.cpp  StatsDialog.h
client/view/screens/: LobbyScreen.cpp  LobbyScreen.h  ModeSelectionScreen.cpp  ModeSelectionScreen.h  ResultsScreen.cpp  ResultsScreen.h  TypingScreen.cpp  TypingScreen.h
database/: CMakeLists.txt  build.sql  database_base.hpp  get_text.cpp  main.cpp  setup_db.sh  text_database.cpp  text_database.hpp
database/test/: test_text_database.cpp
pr1/: CMakeLists.txt  main.cpp
pr1/pr1/: CMakeLists.txt
pr1/view/: MainWindow.cpp  MainWindow.h
pr1/view/screens/: ResultsScreen.cpp  TypingScreen.h
server/: CMakeLists.txt  main.cpp  request_router.cpp  request_router.hpp  server.cpp  server.hpp  server.md  text_manager.cpp  user_manager.cpp
server/handlers/: quote_handler.cpp  quote_handler.hpp
server/include/: text_manager.hpp  user.hpp  user_manager.hpp
server/include/database/: db_connection.hpp  global_stats.hpp  stats_repository.hpp
server/src/: client.cpp  server.cpp  statistics.cpp
server/src/database/: global_stats.cpp  stats_repository.cpp
trash/: CMakeLists.txt  build.sql  db_connection.cpp  db_connection.hpp  get_text.cpp  global_stats.hpp  json_work.cpp  main.cpp  mysql_example.cpp  postgres_app  server_bd.cpp  server_bd.hpp  stats_repository.hpp  text_database.cpp  text_database.hpp
trash/b/: CMakeCache.txt
view/: MainWindow.cpp  MainWindow.h
view/screens/: ModeSelectionScreen.cpp  UserTextScreen.cpp  UserTextScreen.h
